# presk

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  README.md  missing-types.d.ts  package-lock.json  package.json  playwright.bench.config.ts  playwright.config.ts  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.jsonc
benchmarks/: README.md  baseline.json  codec-bench.bench.spec.ts  compare.mjs  playwright.config.ts
codecs/oxipng/: Cargo.toml  build.sh
codecs/oxipng/pkg/: squoosh_oxipng.d.ts  squoosh_oxipng.js  squoosh_oxipng_bg.wasm  squoosh_oxipng_bg.wasm.d.ts
codecs/oxipng/pkg-parallel/: package.json  squoosh_oxipng.d.ts  squoosh_oxipng.js  squoosh_oxipng_bg.wasm  squoosh_oxipng_bg.wasm.d.ts
codecs/oxipng/src/: lib.rs
docs/: HANDOFF-2026-05-30.md  INDEX.md  MIGRATION-PLAN.md  README.md  STATUS.md  WORKLOG.md  browser-support.md  build-and-runtime.md  bulk-image-architecture.md  bulk-ui-design-options.md  codec-build-notes.md  codec-options-model.md  codec-provenance.md  codec-source-references.md  codec-surface-cleanup.md  codec-upgrade-audit.md  codec-upgrade-handoff.md  codec-upgrade-runbooks.md  dashboard.html  dependency-modernization.md  first-principles-review.md  frisp-cli-analysis.md  issue-list.md  journey-and-article-notes.md  keyboard-control.md  lab-editor-restyle.md  lab-intro-page.md  maintenance-status.md  manual-qa.md  mobile-save-ux.md  new-codec-investigation.md  overview.md  parity-audit.md  phase-1-readiness-audit.md  presk-rename-runbook.md  progress-dashboard.html  road-map.md  (+15 more)
(+466 files in other folders)
